Started to fix spacing on form in Windows

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,8 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
 @import "compass/reset";
 @import "compass/typography/vertical_rhythm";
 @import url(http://fonts.googleapis.com/css?family=Raleway:300);
@@ -210,14 +205,12 @@ form {
 		@include adjust-font-size-to(14px, 1.5);
 	}
 
-	select, input {
-		margin: rhythm(1/8, 14px) 0;
-	}
-
 	input {
 		@include adjust-font-size-to(14px, 1);
 		border: 1px solid #ccc;
 		padding: 3px;
+		height: rhythm(1.2);
+
 	}
 
 	input:disabled {
@@ -243,6 +236,8 @@ form {
 	input[type="checkbox"], input[type="radio"] {
 		vertical-align: 2px;
 		margin-right: 3px;
+		border: none;
+		height: auto;
 	}
 
 	div.button-row {
@@ -255,6 +250,7 @@ form {
 		margin: 0;
 		display: inline;
 		padding: 10px 15px;
+		height: 44px;
 		background-color: #eee;
 		color: #888;
 		border: none;
